--- a/pages/1788.html
+++ b/pages/1788.html
@@ -311,10 +311,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><code class='maruku-mathml'>
-  
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_90f639d7fed442dbda0eba105b5cd8e9e3f01168_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>H</mi> <mn>3</mn></msub><mo>≔</mo><mi>A</mi><mo>∧</mo><mi>d</mi><mi>A</mi></mrow><annotation encoding='application/x-tex'>
+  H_3 \coloneqq A \wedge d A
 
-</code></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_04092664024d3c15db49c269e87f31186bd7a790_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd></mtd> <mtd><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub></mrow></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>b</mi><mo>′</mo></mrow></msup><msub><mrow></mrow> <mi>c</mi></msub></mrow></msub><mo stretchy='false'>(</mo><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>d</mi></msub></mrow></msub><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mrow><mi>b</mi><mi>d</mi></mrow></msup><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>e</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>=</mo></mphantom><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub></mrow></msub><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub><mo>+</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>f</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mrow><mi>d</mi><mi>c</mi></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mrow><mi>b</mi><mi>d</mi></mrow></msup><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>e</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>=</mo></mphantom><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub></mrow></msub><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub><mo>+</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>f</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mrow><mi>d</mi><mi>c</mi></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mn>10</mn><msub><mi>B</mi> <mrow><mi>f</mi><mi>b</mi></mrow></msub><mo>∧</mo><msup><mi>B</mi> <mrow><mi>b</mi><mi>d</mi></mrow></msup><mo>−</mo><mn>10</mn><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>20</mn><mo>⋅</mo><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_90f639d7fed442dbda0eba105b5cd8e9e3f01168_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>δ</mi><mrow><mo>(</mo><msub><mo>∫</mo> <mrow><msub><mi>X</mi> <mn>10</mn></msub></mrow></msub><msub><mi>H</mi> <mn>3</mn></msub><mo>∧</mo><mo>⋆</mo><msub><mi>H</mi> <mn>3</mn></msub><mo>)</mo></mrow></mtd> <mtd><mo>=</mo><mn>2</mn><msub><mo>∫</mo> <mrow><msub><mi>X</mi> <mn>10</mn></msub></mrow></msub><mi>δ</mi><mi>A</mi><mo>∧</mo><msub><mi>F</mi> <mn>2</mn></msub><mo>∧</mo><mo>⋆</mo><msub><mi>H</mi> <mn>3</mn></msub><mo>+</mo><msub><mo>∫</mo> <mrow><msub><mi>X</mi> <mn>10</mn></msub></mrow></msub><mi>A</mi><mo>∧</mo><mi>d</mi><mi>δ</mi><mi>A</mi><mo>∧</mo><mo>⋆</mo><msub><mi>H</mi> <mn>3</mn></msub><mo>+</mo><msub><mo>∫</mo> <mrow><msub><mi>X</mi> <mn>10</mn></msub></mrow></msub><msub><mi>H</mi> <mn>3</mn></msub><mo>∧</mo><mo>⋆</mo><mo stretchy='false'>(</mo><mi>A</mi><mo>∧</mo><mi>d</mi><mi>δ</mi><mi>A</mi><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mn>2</mn><msub><mo>∫</mo> <mrow><msub><mi>X</mi> <mn>10</mn></msub></mrow></msub><mi>δ</mi><mi>A</mi><mo>∧</mo><msub><mi>F</mi> <mn>2</mn></msub><mo>∧</mo><mo>⋆</mo><msub><mi>H</mi> <mn>3</mn></msub><mo>+</mo><msub><mo>∫</mo> <mrow><msub><mi>X</mi> <mn>10</mn></msub></mrow></msub><mi>A</mi><mo>∧</mo><mi>d</mi><mi>δ</mi><mi>A</mi><mo>∧</mo><mo>⋆</mo><msub><mi>H</mi> <mn>3</mn></msub><mo>+</mo><msub><mo>∫</mo> <mrow><msub><mi>X</mi> <mn>10</mn></msub></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo>∧</mo><mi>d</mi><mi>δ</mi><mi>A</mi><mo stretchy='false'>)</mo><mo>∧</mo><mo>⋆</mo><msub><mi>H</mi> <mn>3</mn></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+  \delta
+  \left(
+     \int_{X_{10}}
+     H_3 \wedge 
+     \star H_3
+  \right)
+  &amp; =
+  2 \int_{X_{10}} \delta A  \wedge F_2 \wedge \star H_3
+  +
+  \int_{X_{10}}
+  A \wedge d \delta A
+  \wedge \star H_3
+  +
+  \int_{X_{10}}
+  H_3
+  \wedge \star ( A \wedge d \delta A)
+  \\
+  &amp; =
+  2 \int_{X_{10}} \delta A  \wedge F_2 \wedge \star H_3
+  +
+  \int_{X_{10}}
+  A \wedge d \delta A
+  \wedge \star H_3
+  +
+  \int_{X_{10}}
+  ( A \wedge d \delta A)
+  \wedge \star 
+  H_3
+  \end{aligned}
+
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_90f639d7fed442dbda0eba105b5cd8e9e3f01168_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd></mtd> <mtd><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub></mrow></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>b</mi><mo>′</mo></mrow></msup><msub><mrow></mrow> <mi>c</mi></msub></mrow></msub><mo stretchy='false'>(</mo><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>d</mi></msub></mrow></msub><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mrow><mi>b</mi><mi>d</mi></mrow></msup><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>e</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>=</mo></mphantom><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub></mrow></msub><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub><mo>+</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>f</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mrow><mi>d</mi><mi>c</mi></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mrow><mi>b</mi><mi>d</mi></mrow></msup><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>e</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mphantom><mo>=</mo></mphantom><mo>−</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>f</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub></mrow></msub><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mrow><mi>b</mi><mo>′</mo></mrow></msub><mo>+</mo><msup><mi>B</mi> <mi>a</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>c</mi></msub><msub><mo>∂</mo> <mrow><msup><mi>B</mi> <mrow><mi>a</mi><mi>f</mi></mrow></msup></mrow></msub><msup><mi>B</mi> <mrow><mi>d</mi><mi>c</mi></mrow></msup></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mn>10</mn><msub><mi>B</mi> <mrow><mi>f</mi><mi>b</mi></mrow></msub><mo>∧</mo><msup><mi>B</mi> <mrow><mi>b</mi><mi>d</mi></mrow></msup><mo>−</mo><mn>10</mn><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mi>b</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>b</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>20</mn><mo>⋅</mo><msup><mi>B</mi> <mi>d</mi></msup><msub><mrow></mrow> <mi>e</mi></msub><mo>∧</mo><msup><mi>B</mi> <mi>e</mi></msup><msub><mrow></mrow> <mi>f</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \begin{aligned}
     &amp; 
     B^{a}{}_b \wedge B^b{}_c 
@@ -368,7 +400,7 @@ margin-left: 0em;
     - 20 \cdot B^{d}{}_e \wedge B^{e}{}_f
   \end{aligned}
 
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_04092664024d3c15db49c269e87f31186bd7a790_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>η</mi> <mi>μ</mi> <mi>α</mi></msubsup><mo>=</mo><mi>ϕ</mi><msubsup><mi>ψ</mi> <mi>μ</mi> <mi>α</mi></msubsup><mo>+</mo><msup><mi>Γ</mi> <mi>μ</mi></msup><mrow><mi>α</mi><mi>β</mi></mrow><msub><mo>∂</mo> <mi>μ</mi></msub><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_90f639d7fed442dbda0eba105b5cd8e9e3f01168_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>η</mi> <mi>μ</mi> <mi>α</mi></msubsup><mo>=</mo><mi>ϕ</mi><msubsup><mi>ψ</mi> <mi>μ</mi> <mi>α</mi></msubsup><mo>+</mo><msup><mi>Γ</mi> <mi>μ</mi></msup><mrow><mi>α</mi><mi>β</mi></mrow><msub><mo>∂</mo> <mi>μ</mi></msub><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>
   \eta^\alpha_\mu = \phi \psi^\alpha_\mu +  \Gamma^{\mu}{\alpha \beta} \partial_\mu \phi
 
 </annotation></semantics></math></div>
@@ -384,14 +416,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  9, 2018 15:51:52 
-  by <a class="existingWikiWord" href="/nlab/show/Richard+Williamson">Richard Williamson</a>
-  (84.202.247.109)
+  Revised on March 11, 2018 05:38:16 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.206)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1449" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1449 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1450" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1450 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
