--- a/pages/19059.html
+++ b/pages/19059.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Theory and Applications of Categories in nLab
+      R. James Milgram in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Theory and Applications of Categories
+      R. James Milgram
   </h1>
 
 
@@ -308,35 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><em>Theory and Applications of Categories</em> (or just <em>TAC</em>) is an online journal about <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>. In addition to new material, they also make available important classics that have been hard to find.</p>
+    <ul>
+<li><a href='http://math.stanford.edu/~milgram/'>webpage</a></li>
+</ul>
 
-<p>The website is <a href='http://www.tac.mta.ca/tac/'>http://www.tac.mta.ca/tac/</a>, from which you have access to all articles in all issues. Note that <code>http://www.tac.mta.ca/</code> does <em>not</em> work.</p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_4b212abed77bfbcce01c3499c876c160f33ea316_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
-<p>Controversies: <em>TAC</em> is a high-quality journal with an impressive <a href='http://www.tac.mta.ca/tac/geninfo.html#edlist'>editorial board</a>, but unfortunately it is not listed on commercial lists of prestigious journals like the “Science Citation Index” and “Current Contents”; we should fight to improve this. Unfortunately, also the citations from <em>TAC</em> are not yet counted on MathSciNet either, due to the unpopularity of category theory in the leadership of the AMS (see <a href='https://nforum.ncatlab.org/discussion/1927'>nForum discussion</a>). Another pure category journal is <a class='existingWikiWord' href='/nlab/show/Cahiers'>Cahiers</a>.</p>
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/group+cohomology'>group cohomology</a></p>
+</li>
 
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Massey+product'>Massey product</a></p>
+</li>
+</ul>
 
-<p>
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on March 13, 2018 05:11:27 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (147.147.173.215)
+  Created on March 13, 2018 05:15:42 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Theory+and+Applications+of+Categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Theory+and+Applications+of+Categories/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Theory+and+Applications+of+Categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Theory+and+Applications+of+Categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/R.+James+Milgram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Theory+and+Applications+of+Categories" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/R.+James+Milgram" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Theory+and+Applications+of+Categories" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/R.+James+Milgram" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Theory+and+Applications+of+Categories" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/R.+James+Milgram" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
