--- a/pages/19046.html
+++ b/pages/19046.html
@@ -301,9 +301,6 @@ margin-left: 0em;
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
 </form>  <span id='navEnd'></span>
 </div>
-<div>
-   <p style="font-size: 0.85em; color:red;">Please note that the nLab and nForum will be down for planned maintenance between around 02:00 GMT and 15:00 GMT on the 11th of March. The <a href="https://groups.google.com/forum/#!forum/nlab-talk">nLab talk</a> Google Group can be used for communication during the period of downtime. Apologies for any inconvenience.</p>    
-</div>
 
 
 
@@ -643,7 +640,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_3596e5d218088734a83c993b8815ec58e011e3b9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -981,13 +978,17 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_3596e5d218088734a83c993b8815ec58e011e3b9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_3596e5d218088734a83c993b8815ec58e011e3b9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
+<p>An <strong>exponentiable topos</strong> is a generalization of the notion of an exponentiable <a class='existingWikiWord' href='/nlab/show/locale'>locale</a> and can be viewed as a (topological) “space” <math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> that behaves well with respect to the construction of mapping spaces <math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Y</mi> <mi>X</mi></msup></mrow><annotation encoding='application/x-tex'>Y^X</annotation></semantics></math>.</p>
 
 <p>The concept generalizes to <a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a>.</p>
 
 <h2 id='definition'>Definition</h2>
 
-<p>…</p>
+<div class='num_def'>
+<h6 id='definition_2'>Definition</h6>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>exponentiable</em> (in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes) if the 2-functor <math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>×</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>-\times\mathcal{E}</annotation></semantics></math> has a right 2-adjoint denoted <math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mo stretchy='false'>(</mo> <mo stretchy='false'>)</mo> <mi>ℰ</mi></msubsup></mrow><annotation encoding='application/x-tex'>(_)^\mathcal{E}</annotation></semantics></math>.</p>
+</div>
 
 <h2 id='properties'>Properties</h2>
 
@@ -996,7 +997,7 @@ margin-left: 0em;
 <div class='num_prop'>
 <h6 id='theorem'>Theorem</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_3596e5d218088734a83c993b8815ec58e011e3b9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_3596e5d218088734a83c993b8815ec58e011e3b9_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is an exponentiable object in the 2-category of Grothendieck toposes and <a class='existingWikiWord' href='/nlab/show/geometric+morphism'>geometric morphisms</a> iff <math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous category</a>.</p>
 </div>
 
 <p>This result is due to Johnstone-Joyal (<a href='#JJ82'>1982</a>) and occurs as theorem 4.4.5 of (<a href='#J02'>Johnstone (2002), p.748</a>).</p>
@@ -1009,7 +1010,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>By the same reasoning all functor categories <math class='maruku-mathml' display='inline' id='mathml_3596e5d218088734a83c993b8815ec58e011e3b9_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Set</mi> <mi>𝒞</mi></msup></mrow><annotation encoding='application/x-tex'>Set^{\mathcal{C}}</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_3596e5d218088734a83c993b8815ec58e011e3b9_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> are exponentiable since they are <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable</a>. This includes in particular all <a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>presheaf toposes</a> on small categories.</p>
+<p>By the same reasoning all functor categories <math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>Set</mi> <mi>𝒞</mi></msup></mrow><annotation encoding='application/x-tex'>Set^{\mathcal{C}}</annotation></semantics></math> for <math class='maruku-mathml' display='inline' id='mathml_d561c5ea46d969433e547dec98fddf1ac4c16007_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> are exponentiable since they are <a class='existingWikiWord' href='/nlab/show/locally+finitely+presentable+category'>locally finitely presentable</a>. This includes in particular all <a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>presheaf toposes</a> on small categories.</p>
 </li>
 </ul>
 
@@ -1065,7 +1066,7 @@ margin-left: 0em;
 </li>
 
 <li id='J02'>
-<p><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <em>Sketches of Elephant vol.2</em> , CUP 2002. (section C4.4 pp.745-754)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Peter+Johnstone'>Peter Johnstone</a>, <em>Sketches of Elephant vols. 1&amp;2</em> , CUP 2002. (sections B4.3 pp.432-438, C4.4 pp.745-754)</p>
 </li>
 
 <li id='Lurie18'>
@@ -1083,14 +1084,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  8, 2018 17:21:41 
+  Revised on March 13, 2018 09:57:31 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (89.204.135.9)
+  (82.113.121.136)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exponentiable+topos/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/exponentiable+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exponentiable+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/exponentiable+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/exponentiable+topos/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/exponentiable+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/exponentiable+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
